--- a/module/window/app/_chat.scss
+++ b/module/window/app/_chat.scss
@@ -936,7 +936,7 @@ div:not(.ActiveVoiceChannel)>.chatRoomVoiceChannelNameContainer {
   position: absolute;
   inset: 0;
   background: var(--zehn-color-app);
-  margin-top: var(--chat-margin);
+  margin-top: calc(var(--chat-margin));
 }
 
 // MOVE OVER STUFF WHEN NAV COLUMN IS OPENED
@@ -1196,19 +1196,19 @@ div:not(.ActiveVoiceChannel)>.chatRoomVoiceChannelNameContainer {
 .ChatRoomGroup_Main_Content .chatHistory,
 .ChatRoomGroup_Main_Content.Horizontal .chatHistory,
 .ChatRoomGroup_Main_Content.Vertical .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 // GROUP CHAT
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content .chatHistory,
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content.Horizontal .chatHistory,
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content.Vertical .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 // GROUP CHAT W/ BROADCAST
 .MultiUserChat.namedGroup.broadcastVisible .ChatRoomGroup_Main_Content.Horizontal .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .MultiUserChat.namedGroup.broadcastVisible .ChatRoomGroup_Main_Content.Vertical .chatHistory {
@@ -1217,7 +1217,7 @@ div:not(.ActiveVoiceChannel)>.chatRoomVoiceChannelNameContainer {
 
 // BROADCAST PUBLIC CHAT
 .ChatRoomGroup_Main_Content.Horizontal .ChatMessages {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .BothChatsDisplayed .ChatRoomGroup_Main_Content.Horizontal .ChatMessages,
